apps/staging/gotify/deployment-replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: default
spec:
  replicas: 1
